# aravis

./: .clang-format  .clang-format-include  .coveralls.yml  .editorconfig  .env  .gitignore  .lgtm.yml  .travis.yml  AUTHORS  CITATION.cff  CMakeLists.txt  COPYING  Docker.md  Dockerfile  INSTALL  Makefile  Makefile.am  Makefile.decl  NEWS  NEWS.md  README  README-mingw.md  README.md  RELEASING  RELEASING.md  TODO  alias.PixelFormat.html  aravis-0.10.devhelp2  aravis-0.8.devhelp2  aravis.doap  aravis.pc.in  aravis.rules  aravis.spec  arvconfig.h.in  autogen.sh  building.html  callback.DomDocumentCreateFunction.html  callback.FakeCameraFillPattern.html  callback.FrameCallback.html  callback.StreamCallback.html  (+989 more)
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
aravis-0.10/: callback.StreamCallback.html  class.Camera.html  class.DomNode.html  class.DomNodeList.html  class.GcConverter.html  class.GcEnumeration.html  class.GcPort.html  class.GcRegisterDescriptionNode.html  class.GcStringNode.html  class.GcValueIndexedNode.html  class.GenTLInterface.html  class.GenTLSystem.html  class.GvFakeCamera.html  class.XmlSchema.html  const.PIXEL_FORMAT_BAYER_BG_12P.html  const.PIXEL_FORMAT_BAYER_GB_10.html  const.PIXEL_FORMAT_BAYER_GB_10P.html  const.PIXEL_FORMAT_BAYER_GB_12_PACKED.html  const.PIXEL_FORMAT_BAYER_GR_12.html  const.PIXEL_FORMAT_BAYER_RG_12P.html  const.PIXEL_FORMAT_BAYER_RG_12_PACKED.html  const.PIXEL_FORMAT_COORD3D_ABC_12P_PLANAR.html  const.PIXEL_FORMAT_COORD3D_AC_12P_PLANAR.html  const.PIXEL_FORMAT_COORD3D_A_10P.html  const.PIXEL_FORMAT_COORD3D_A_12P.html  const.PIXEL_FORMAT_COORD3D_B_12P.html  const.PIXEL_FORMAT_COORD3D_B_16.html  const.PIXEL_FORMAT_COORD3D_B_8.html  const.PIXEL_FORMAT_COORD3D_C_16.html  const.PIXEL_FORMAT_COORD3D_C_8.html  const.PIXEL_FORMAT_CUSTOM_BAYER_BG_16.html  const.PIXEL_FORMAT_CUSTOM_BAYER_GR_12_PACKED.html  const.PIXEL_FORMAT_CUSTOM_BAYER_RG_12_PACKED.html  const.PIXEL_FORMAT_MONO_8.html  const.PIXEL_FORMAT_RGB_12_PLANAR.html  const.PIXEL_FORMAT_RGB_16_PLANAR.html  const.PIXEL_FORMAT_YUV_422_PACKED.html  const.PIXEL_FORMAT_YUV_422_YUYV_PACKED.html  ctor.Buffer.new.html  ctor.Camera.new.html  (+156 more)
aravis-0.8/: aravis-0.8.devhelp2  building.html  callback.DomDocumentCreateFunction.html  callback.FakeCameraFillPattern.html  callback.StreamCallback.html  class.Buffer.html  class.DomDocumentFragment.html  class.DomElement.html  class.DomNode.html  class.DomNodeChildList.html  class.DomText.html  class.Evaluator.html  class.FakeInterface.html  class.FakeStream.html  class.GcCommand.html  class.GcConverter.html  class.GcConverterNode.html  class.GcEnumeration.html  class.GcFeatureNode.html  class.GcFloatNode.html  class.GcFloatRegNode.html  class.GcGroupNode.html  class.GcIndexNode.html  class.GcIntConverterNode.html  class.GcIntegerNode.html  class.GcPropertyNode.html  (+467 more)
docs/reference/aravis/: .gitignore  Makefile.am  aravis-docs.xml  aravis-gv.xml  aravis-overview.xml  aravis-sections.txt  aravis.toml.in  aravis.types  building.md  ethernet.md  examples.md  gentl.md  gv.md  introduction.md  meson.build  porting-0.10.md  porting-0.8.md  tests.md  thread-safety.md  usb.md  utilities.md
docs/reference/aravis/xml/: meson.build
drivers/: meson.build  mesonbuildkmod.sh
drivers/linux-gv/: Kbuild  arvgvkmod.c  meson.build
gst/: .gitignore  Makefile.am  arv-gst-test  arv-gst-test-theora  arvgst.c  gst-aravis-inspect  gst-aravis-inspect.in  gst-aravis-launch  gst-aravis-launch.in  gst-aravis-test  gst-aravis-test-theora  gstaravis.c  gstaravis.h  gstaravistest.c  meson.build  pipelines.md
src/: .gitignore  GenApiSchema_Version_1_1.xsd  GenTL_v1_5.h  Makefile.am  aravis.rules  aravistest.c  arv-fake-camera-xml.inl  arv-fake-camera.xml  arv-gev-bootstrap.xml  arv-test.cfg  arv-test.ini  arv-v4l2.xml  arv.c  arv.h  arvapi.h  arvapi.h.in  arvbuffer.c  arvbuffer.h  arvbufferprivate.h  arvcamera.c  arvcamera.h  arvcameratest.c  arvchunkparser.c  arvchunkparser.h  arvchunkparserprivate.h  arvcontrol.c  arvdebug.c  arvdebug.h  arvdebugprivate.h  arvdevice.c  arvdevice.h  arvdeviceprivate.h  arvdom.h  arvdomcharacterdata.c  arvdomcharacterdata.h  arvdomdocument.c  arvdomdocument.h  arvdomdocumentfragment.c  arvdomdocumentfragment.h  arvdomelement.c  (+245 more)
src/data/: arv-fake-camera.xml  arvresources.gresource.xml
src/gentl/: GenTL_v1_6.h  Makefile  README.md  TODO.md  dev.c  ds.c  event.c  gc.c  if.c  if.h  meson.build  private-buf.c  private.c  private.h  test-01-load.py  test-02-nodes.py  tl.c
src/tests/: .gitignore  Makefile.am  evaluator.c  fake.c  formula.c  genicam.c  genicam.xml
tests/: .gitignore  Makefile.am  aravis.supp  arvacquisitiontest.c  arvautopacketsizetest.c  arvcameratest.c  arvchunkparsertest.c  arvdevicescantest.c  arvdevicetest.c  arvenums.c  arvevaluatortest.c  arvexample.c  arvgenicamtest.c  arvgstteardowntest.c  arvgsttest.c  arvheartbeattest.c  arvmultiuvtest.c  arvnetworktest.c  arvroitest.c  arvtest.c  arvziptest.c  buffer.c  cpp.cc  device.py  dom.c  evaluator.c  exception.py  fake.c  fake.py  fakegv.c  genicam.c  jslaunch-dbg.in  jslaunch.in  loadhttptest.c  meson.build  misc.c  pylaunch-dbg.in  pylaunch.in  realtimetest.c  singlethreadtest.c  (+3 more)
tests/data/: genicam.xml  pipelines.txt
tests/js/: arv-camera-test.js  arv-evaluator-test.js  arv-fake-test.js  launch
tests/python/: arv-buffer-test.py  arv-camera-test.py  arv-enum-test.py  arv-evaluator-test.py  arv-feature-test.py  arv-genicam-test.py  arv-gentl-producer-load-test.py  arv-gentl-producer-nodes-test.py  arv-gst-software-trigger.py  arv-pixel-format-test.py  arv-roi-test.py  arv-single-buffer-test.py  arv-stream-callback.py  launch  launch-dbg
viewer/: .gitignore  Makefile.am  arv-viewer-2.ui  arv-viewer-3.ui  arv-viewer.ui  arvfeaturewidget.c  arvfeaturewidget.h  arvviewer.c  arvviewer.h  arvviewerfeatures.h.in  arvviewerresources.xml  arvviewertypes.h  main.c  meson.build
viewer/data/: .gitignore  Makefile.am  arv-viewer.appdata.xml.in  arv-viewer.desktop.in.in  meson.build  org.aravis.viewer.appdata.xml.in  org.aravis.viewer.desktop.in.in
viewer/icons/: README
(+2084 files in other folders)
