# Features

option('viewer', type: 'feature', value: 'auto', description : 'Build simple viewer')
option('gst-plugin', type: 'feature', value: 'auto', description : 'Build GStreamer plugin')
option('usb', type: 'feature', value: 'auto', description : 'Enable USB support')
option('packet-socket', type: 'feature', value: 'auto', description : 'Enable packet socket support')

option('tests', type: 'boolean', value: true, description: 'Build tests')
option('fast-heartbeat', type: 'boolean', value: false, description: 'Enable faster heartbeat rate')

# Parameters

option('gv-n-buffers', type: 'integer', min: 1, value: 16, description: 'Number of buffers used to receive GVSP packets')

# Documentation and introspection

option('introspection', type: 'feature', value: 'auto', description: 'Build introspection data (requires gobject-introspection)')
option('documentation', type: 'feature', value: 'disabled', description: 'Build documentation (requires gi-docgen)')
